{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 62,
  "lineage": "48dd89f2-de0f-3b09-ee74-8b56b1e08f15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d73211ac60af6e5",
            "arn": "arn:aws:ec2:us-east-1:697675505426:elastic-ip/eipalloc-08d73211ac60af6e5",
            "association_id": "eipassoc-0ce04d2367a936d50",
            "domain": "vpc",
            "id": "eipalloc-08d73211ac60af6e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-088513d8f764cf049",
            "private_dns": "ip-10-0-1-99.ec2.internal",
            "private_ip": "10.0.1.99",
            "public_dns": "ec2-35-172-51-108.compute-1.amazonaws.com",
            "public_ip": "35.172.51.108",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-nat-eip",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-nat-eip",
              "Project": "document-processing-lab"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "eipalloc-08d73211ac60af6e5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:internet-gateway/igw-0f7e0b72fe5e1ad55",
            "id": "igw-0f7e0b72fe5e1ad55",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-igw",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-igw",
              "Project": "document-processing-lab"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "igw-0f7e0b72fe5e1ad55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:loadbalancer/app/document-processing-lab-alb/5739eda876610e73",
            "arn_suffix": "app/document-processing-lab-alb/5739eda876610e73",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "document-processing-lab-alb-673387838.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697675505426:loadbalancer/app/document-processing-lab-alb/5739eda876610e73",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "document-processing-lab-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c67c2a7481cb1cdd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028d08dfa92cb9fc5"
              },
              {
                "subnet_id": "subnet-04ace0c2d9ec62b2f"
              }
            ],
            "subnets": [
              "subnet-028d08dfa92cb9fc5",
              "subnet-04ace0c2d9ec62b2f"
            ],
            "tags": {
              "Name": "document-processing-lab-alb",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-alb",
              "Project": "document-processing-lab"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:loadbalancer/app/document-processing-lab-alb/5739eda876610e73"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:listener/app/document-processing-lab-alb/5739eda876610e73/7f772856b6bf02d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:targetgroup/document-processing-lab-doc-tg/c3fd9e06e69d33b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697675505426:listener/app/document-processing-lab-alb/5739eda876610e73/7f772856b6bf02d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:loadbalancer/app/document-processing-lab-alb/5739eda876610e73",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:listener/app/document-processing-lab-alb/5739eda876610e73/7f772856b6bf02d4"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.document_service",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "document_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:targetgroup/document-processing-lab-doc-tg/c3fd9e06e69d33b4",
            "arn_suffix": "targetgroup/document-processing-lab-doc-tg/c3fd9e06e69d33b4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697675505426:targetgroup/document-processing-lab-doc-tg/c3fd9e06e69d33b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "document-processing-lab-doc-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "document-processing-lab-doc-tg",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-doc-tg",
              "Project": "document-processing-lab"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697675505426:targetgroup/document-processing-lab-doc-tg/c3fd9e06e69d33b4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d73211ac60af6e5",
            "association_id": "eipassoc-0ce04d2367a936d50",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-098af6fc7c89f78ec",
            "network_interface_id": "eni-088513d8f764cf049",
            "private_ip": "10.0.1.99",
            "public_ip": "35.172.51.108",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04ace0c2d9ec62b2f",
            "tags": {
              "Name": "document-processing-lab-nat-gateway",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-nat-gateway",
              "Project": "document-processing-lab"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "nat-098af6fc7c89f78ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:route-table/rtb-0ed6c6b78f35a5b49",
            "id": "rtb-0ed6c6b78f35a5b49",
            "owner_id": "697675505426",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-098af6fc7c89f78ec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "document-processing-lab-private-app-rt",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-private-app-rt",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtb-0ed6c6b78f35a5b49",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:route-table/rtb-0da5e1d0b5b641616",
            "id": "rtb-0da5e1d0b5b641616",
            "owner_id": "697675505426",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "document-processing-lab-private-db-rt",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-private-db-rt",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtb-0da5e1d0b5b641616",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:route-table/rtb-080aa60572a864ec8",
            "id": "rtb-080aa60572a864ec8",
            "owner_id": "697675505426",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7e0b72fe5e1ad55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "document-processing-lab-public-rt",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-public-rt",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtb-080aa60572a864ec8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eac63aa78a60a15",
            "region": "us-east-1",
            "route_table_id": "rtb-0ed6c6b78f35a5b49",
            "subnet_id": "subnet-0e40d2d2605f6edd5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtbassoc-01eac63aa78a60a15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032cccc2cd562b158",
            "region": "us-east-1",
            "route_table_id": "rtb-0ed6c6b78f35a5b49",
            "subnet_id": "subnet-0b490087d68cd1171"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtbassoc-032cccc2cd562b158",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f15bc0c49232c0d",
            "region": "us-east-1",
            "route_table_id": "rtb-0da5e1d0b5b641616",
            "subnet_id": "subnet-0f49ba7e3036669db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtbassoc-06f15bc0c49232c0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e3e78e3e90a3bbc",
            "region": "us-east-1",
            "route_table_id": "rtb-0da5e1d0b5b641616",
            "subnet_id": "subnet-06f041c841a9a7c66"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtbassoc-01e3e78e3e90a3bbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06645dc644a60a96f",
            "region": "us-east-1",
            "route_table_id": "rtb-080aa60572a864ec8",
            "subnet_id": "subnet-04ace0c2d9ec62b2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtbassoc-06645dc644a60a96f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfe47502959227fa",
            "region": "us-east-1",
            "route_table_id": "rtb-080aa60572a864ec8",
            "subnet_id": "subnet-028d08dfa92cb9fc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "rtbassoc-0dfe47502959227fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group/sg-0c67c2a7481cb1cdd",
            "description": "Allow public HTTP traffic to the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach document-service",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0303d7e8e0a0c472f"
                ],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach export-job-service if needed",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0303d7e8e0a0c472f"
                ],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach processing-service if needed",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0303d7e8e0a0c472f"
                ],
                "self": false,
                "to_port": 8082
              }
            ],
            "id": "sg-0c67c2a7481cb1cdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "document-processing-lab-alb-sg",
            "name_prefix": "",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "document-processing-lab-alb-sg",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-alb-sg",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sg-0c67c2a7481cb1cdd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group/sg-0303d7e8e0a0c472f",
            "description": "Security group for application EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from app instances",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0303d7e8e0a0c472f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access document-service",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c67c2a7481cb1cdd"
                ],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access export-job-service if needed",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c67c2a7481cb1cdd"
                ],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access processing-service if needed",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c67c2a7481cb1cdd"
                ],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [],
                "description": "Allow internal app communication on port 8081",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "Allow internal app communication on port 8082",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8082
              },
              {
                "cidr_blocks": [],
                "description": "Allow internal app communication on port 8083",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8083
              }
            ],
            "name": "document-processing-lab-app-sg",
            "name_prefix": "",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "document-processing-lab-app-sg",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-app-sg",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group/sg-05093800caea2b13b",
            "description": "Security group for Kafka EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from Kafka instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05093800caea2b13b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow application services to access Kafka broker",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0303d7e8e0a0c472f"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "document-processing-lab-kafka-sg",
            "name_prefix": "",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "document-processing-lab-kafka-sg",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-kafka-sg",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sg-05093800caea2b13b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group/sg-054c2e9f4f8f452fe",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from RDS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054c2e9f4f8f452fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow application services to access PostgreSQL RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0303d7e8e0a0c472f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "document-processing-lab-rds-sg",
            "name_prefix": "",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "document-processing-lab-rds-sg",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-rds-sg",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sg-054c2e9f4f8f452fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group/sg-01f297abca306daa9",
            "description": "Temporary SSH access from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from SSH-managed instances",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f297abca306daa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.152.111.59/32"
                ],
                "description": "Allow SSH from my public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "document-processing-lab-ssh-sg",
            "name_prefix": "",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "document-processing-lab-ssh-sg",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-ssh-sg",
              "Project": "document-processing-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sg-01f297abca306daa9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:subnet/subnet-0e40d2d2605f6edd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e40d2d2605f6edd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697675505426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-private-app-1",
              "Project": "document-processing-lab",
              "Tier": "private-app"
            },
            "tags_all": {
              "Name": "document-processing-lab-private-app-1",
              "Project": "document-processing-lab",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "subnet-0e40d2d2605f6edd5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:subnet/subnet-0b490087d68cd1171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b490087d68cd1171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697675505426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-private-app-2",
              "Project": "document-processing-lab",
              "Tier": "private-app"
            },
            "tags_all": {
              "Name": "document-processing-lab-private-app-2",
              "Project": "document-processing-lab",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "subnet-0b490087d68cd1171",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:subnet/subnet-0f49ba7e3036669db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f49ba7e3036669db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697675505426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-private-db-1",
              "Project": "document-processing-lab",
              "Tier": "private-db"
            },
            "tags_all": {
              "Name": "document-processing-lab-private-db-1",
              "Project": "document-processing-lab",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "subnet-0f49ba7e3036669db",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:subnet/subnet-06f041c841a9a7c66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f041c841a9a7c66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697675505426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-private-db-2",
              "Project": "document-processing-lab",
              "Tier": "private-db"
            },
            "tags_all": {
              "Name": "document-processing-lab-private-db-2",
              "Project": "document-processing-lab",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "subnet-06f041c841a9a7c66",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:subnet/subnet-04ace0c2d9ec62b2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ace0c2d9ec62b2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697675505426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-public-1",
              "Project": "document-processing-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "document-processing-lab-public-1",
              "Project": "document-processing-lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "subnet-04ace0c2d9ec62b2f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:subnet/subnet-028d08dfa92cb9fc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028d08dfa92cb9fc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697675505426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-public-2",
              "Project": "document-processing-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "document-processing-lab-public-2",
              "Project": "document-processing-lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-07b1aeb48357f3c8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "subnet-028d08dfa92cb9fc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:vpc/vpc-07b1aeb48357f3c8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c24a7da77360a503",
            "default_route_table_id": "rtb-06afdc6e08c214938",
            "default_security_group_id": "sg-0c0dbc3c25677bf0e",
            "dhcp_options_id": "dopt-063158a230fd7cdeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b1aeb48357f3c8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06afdc6e08c214938",
            "owner_id": "697675505426",
            "region": "us-east-1",
            "tags": {
              "Name": "document-processing-lab-vpc",
              "Project": "document-processing-lab"
            },
            "tags_all": {
              "Name": "document-processing-lab-vpc",
              "Project": "document-processing-lab"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "vpc-07b1aeb48357f3c8c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app_document_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-00b381af866d50717",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to reach document-service",
            "from_port": 8081,
            "id": "sgr-00b381af866d50717",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-0c67c2a7481cb1cdd",
            "security_group_rule_id": "sgr-00b381af866d50717",
            "tags": null,
            "tags_all": {},
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-00b381af866d50717",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app_export_job_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-04cebff66867093f1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to reach export-job-service if needed",
            "from_port": 8083,
            "id": "sgr-04cebff66867093f1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-0c67c2a7481cb1cdd",
            "security_group_rule_id": "sgr-04cebff66867093f1",
            "tags": null,
            "tags_all": {},
            "to_port": 8083
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-04cebff66867093f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app_processing_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-03c5c667e594d6f85",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to reach processing-service if needed",
            "from_port": 8082,
            "id": "sgr-03c5c667e594d6f85",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-0c67c2a7481cb1cdd",
            "security_group_rule_id": "sgr-03c5c667e594d6f85",
            "tags": null,
            "tags_all": {},
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-03c5c667e594d6f85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0360016b5eaaa2ee6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from app instances",
            "from_port": null,
            "id": "sgr-0360016b5eaaa2ee6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-0360016b5eaaa2ee6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0360016b5eaaa2ee6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "kafka_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0a67831c0afb8f0d2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from Kafka instance",
            "from_port": null,
            "id": "sgr-0a67831c0afb8f0d2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05093800caea2b13b",
            "security_group_rule_id": "sgr-0a67831c0afb8f0d2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0a67831c0afb8f0d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.kafka",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0e4db08878319baf3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from RDS",
            "from_port": null,
            "id": "sgr-0e4db08878319baf3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-054c2e9f4f8f452fe",
            "security_group_rule_id": "sgr-0e4db08878319baf3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0e4db08878319baf3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ssh_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-05f255cc4d6a03bd3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from SSH-managed instances",
            "from_port": null,
            "id": "sgr-05f255cc4d6a03bd3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01f297abca306daa9",
            "security_group_rule_id": "sgr-05f255cc4d6a03bd3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-05f255cc4d6a03bd3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-087de2a582b7af8bb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from internet",
            "from_port": 80,
            "id": "sgr-087de2a582b7af8bb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c67c2a7481cb1cdd",
            "security_group_rule_id": "sgr-087de2a582b7af8bb",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-087de2a582b7af8bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_document_service_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-045ab97a932035627",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to access document-service",
            "from_port": 8081,
            "id": "sgr-045ab97a932035627",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c67c2a7481cb1cdd",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-045ab97a932035627",
            "tags": null,
            "tags_all": {},
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-045ab97a932035627",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_export_job_service_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-05dd5d8f9142bad86",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to access export-job-service if needed",
            "from_port": 8083,
            "id": "sgr-05dd5d8f9142bad86",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c67c2a7481cb1cdd",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-05dd5d8f9142bad86",
            "tags": null,
            "tags_all": {},
            "to_port": 8083
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-05dd5d8f9142bad86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_internal_http_8081",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-009d867713a6d125e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal app communication on port 8081",
            "from_port": 8081,
            "id": "sgr-009d867713a6d125e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-009d867713a6d125e",
            "tags": null,
            "tags_all": {},
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-009d867713a6d125e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_internal_http_8082",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0063758d71cf49614",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal app communication on port 8082",
            "from_port": 8082,
            "id": "sgr-0063758d71cf49614",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-0063758d71cf49614",
            "tags": null,
            "tags_all": {},
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0063758d71cf49614",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_internal_http_8083",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-03ee52f73a98f5175",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow internal app communication on port 8083",
            "from_port": 8083,
            "id": "sgr-03ee52f73a98f5175",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-03ee52f73a98f5175",
            "tags": null,
            "tags_all": {},
            "to_port": 8083
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-03ee52f73a98f5175",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_processing_service_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0cb2df08cd7601ad4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to access processing-service if needed",
            "from_port": 8082,
            "id": "sgr-0cb2df08cd7601ad4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c67c2a7481cb1cdd",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-0cb2df08cd7601ad4",
            "tags": null,
            "tags_all": {},
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0cb2df08cd7601ad4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-06b124ba1727211b6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow SSH from bastion host to app instances",
            "from_port": 22,
            "id": "sgr-06b124ba1727211b6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01f297abca306daa9",
            "region": "us-east-1",
            "security_group_id": "sg-0303d7e8e0a0c472f",
            "security_group_rule_id": "sgr-06b124ba1727211b6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-06b124ba1727211b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kafka_from_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0fe4159eaf2f342a4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow application services to access Kafka broker",
            "from_port": 9092,
            "id": "sgr-0fe4159eaf2f342a4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-05093800caea2b13b",
            "security_group_rule_id": "sgr-0fe4159eaf2f342a4",
            "tags": null,
            "tags_all": {},
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0fe4159eaf2f342a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.kafka",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kafka_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-09d92078c182b86dd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow SSH from bastion host to Kafka instance",
            "from_port": 22,
            "id": "sgr-09d92078c182b86dd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01f297abca306daa9",
            "region": "us-east-1",
            "security_group_id": "sg-05093800caea2b13b",
            "security_group_rule_id": "sgr-09d92078c182b86dd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-09d92078c182b86dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.kafka",
            "aws_security_group.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-0de11dd907e5f67ac",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow application services to access PostgreSQL RDS",
            "from_port": 5432,
            "id": "sgr-0de11dd907e5f67ac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0303d7e8e0a0c472f",
            "region": "us-east-1",
            "security_group_id": "sg-054c2e9f4f8f452fe",
            "security_group_rule_id": "sgr-0de11dd907e5f67ac",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-0de11dd907e5f67ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697675505426:security-group-rule/sgr-024954353f78ba420",
            "cidr_ipv4": "200.152.111.59/32",
            "cidr_ipv6": null,
            "description": "Allow SSH from my public IP",
            "from_port": 22,
            "id": "sgr-024954353f78ba420",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01f297abca306daa9",
            "security_group_rule_id": "sgr-024954353f78ba420",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697675505426",
            "id": "sgr-024954353f78ba420",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}